--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -180,6 +180,10 @@ textarea {
   color: var(--color-blue-dark);
 }
 
+.text-white {
+  color: var(--color-paper);
+}
+
 .text-align-left {
   text-align: left;
 }
@@ -285,5 +289,68 @@ a,
   &:focus {
     color: var(--color-paper);
     background-size: 4px 100%;
+  }
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  line-height: 1.2em;
+  max-width: 55ch;
+}
+
+.h2 {
+  font-size: 2rem;
+}
+
+.h3 {
+  font-size: 1.8rem;
+}
+
+.h4 {
+  font-size: 1.4rem;
+  font-weight: 900;
+}
+
+.h5 {
+  font-size: 1.2rem;
+  font-weight: 900;
+}
+
+.h6 {
+  font-size: 1.2rem;
+  font-weight: 900;
+  font-style: oblique;
+}
+
+p {
+  font-size: 1.2rem;
+  line-height: 1.25em;
+}
+
+
+blockquote {
+  @extend %fa-icon;
+  @extend .fas;
+
+  font-size: 1.6rem;
+  line-height: 1.2em;
+  padding-left: 2rem;
+  margin: 0 2rem 2rem -2rem;
+
+  &:before {
+    display: inline-block;
+    content: fa-content($fa-var-quote-left);
+    margin-left: -2rem;
+  }
+  &:after {
+    font-size: 0.8rem;
+    bottom: 0.5rem;
+    position: relative;
+    display: inline-block;
+    content: fa-content($fa-var-quote-right);
   }
 }
