--- a/_scss/_popup.scss
+++ b/_scss/_popup.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: row;
   justify-content: center;
-  align-items: flex-start;
+  align-items: stretch;
   position: relative;
   margin: 0;
   padding: 0;
@@ -24,19 +24,34 @@
 }
 
 .popup__toggle {
+  &:hover + .popup__toggle-label,
+  &:focus + .popup__toggle-label {
+    .popup__icon {
+      color: var(--color-blue);
+    }
+  }
+
+
   &:checked + .popup__toggle-label {
     .popup__icon {
+      color: var(--color-paper);
       position: absolute;
       top: -2rem;
       z-index: +2;
       right: 2rem;
 
+      &.popup__icon--bg-white {
+        color: var(--color-blue);
+      }
+
       &:after {
+        font-size: 2rem;
         content: fa-content($fa-var-times-circle);
       }
     }
 
     + .popup__container {
+      opacity: 1;
       height: 600px;
       width: 100%;
       left: 50%;
@@ -56,6 +71,8 @@
   height: 0;
   border-radius: 2rem;
   overflow: hidden;
+  transition: opacity .4s ease;
+  opacity: 0;
 }
 
 .popup__image {
