--- a/_scss/_sections.scss
+++ b/_scss/_sections.scss
@@ -43,7 +43,7 @@
     max-width: 100%;
     z-index: +1;
 
-    a {
+    .link {
       box-sizing: border-box;
       color: var(--color-paper);
       font-size: 1.2rem;
@@ -386,5 +386,179 @@
 
   .backlink {
     margin-top: 4rem;
+  }
+}
+
+#popup-what-can-i-do {
+
+  #popup-what-can-i-do__pt-1 {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem;
+
+    background-image: url('../assets/exports/what-can-i-do-background.png');
+    background-size: auto 400px;
+    background-repeat: no-repeat;
+    background-color: var(--color-blue);
+    width: 100%;
+
+    .component__block--left {
+      max-width: 60%;
+      padding-left: 16rem;
+
+      .h2 {
+        font-size: 3.5rem;
+        line-height: 1em;
+        font-weight: 900;
+        color: var(--color-paper);
+        text-transform: uppercase;
+        text-align: left;
+        margin: 0;
+      }
+
+      p {
+        color: var(--color-paper);
+        font-size: 1.2rem;
+        max-width: 42ch;
+        margin-top: 0;
+      }
+    }
+
+    .component__block--right {
+      color: var(--color-paper);
+      max-width: 40%;
+
+      .h3 {
+        font-size: 1.2rem;
+      }
+
+      ol {
+        li {
+          margin-bottom: 2rem;
+        }
+      }
+    }
+  }
+
+  #popup-what-can-i-do__pt-2 {
+    display: flex;
+    flex-flow: row wrap;
+
+    .h3 {
+      font-size: 1.2rem;
+    }
+
+    .component__block--left {
+      width: 100%;
+      max-width: calc(50% - 4rem);
+      padding: 2rem;
+
+      p {
+        font-size: 1rem;
+        max-width: 42ch;
+      }
+    }
+
+    .component__block--right {
+      width: 100%;
+      max-width: calc(50% - 4rem);
+      padding: 2rem;
+
+      p {
+        font-size: 1rem;
+        max-width: 55ch;
+      }
+    }
+  }
+}
+
+#popup-search-engine {
+  background-image: url('../assets/exports/search-engine-background.png');
+  background-size: auto 600px;
+  background-position: bottom left;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+
+  .h2 {
+    font-size: 3rem;
+    font-weight: 900;
+    line-height: 1em;
+    text-transform: uppercase;
+    color: var(--color-purple);
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    font-weight: 900;
+    line-height: 1em;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+    max-width: 55ch;
+  }
+
+  #search-list {
+    li {
+      display: flex;
+      flex-flow: column;
+      justify-content: flex-end;
+      width: 100%;
+      max-width: 50%;
+
+      .h4 {
+        font-size: 0.8rem;
+        font-weight: 500;
+        margin: 0;
+      }
+    }
+  }
+}
+
+#popup-deep-dive {
+
+  #popup-deep-dive-content {
+    width: 101%;
+    height: 600px;
+    overflow-y: scroll;
+    background-image: url('../assets/exports/deep-dive-background.png');
+    background-size: 100% auto;
+    background-position: top left;
+    background-repeat: no-repeat;
+
+    .title {
+      font-size: 3rem;
+      font-weight: 900;
+      line-height: 1em;
+      color: var(--color-paper);
+      text-transform: uppercase;
+      text-align: left;
+      margin: 0;
+    }
+
+    .sub-title {
+      font-size: 1.2rem;
+      font-weight: 200;
+      line-height: 1.5em;
+      text-align: left;
+      margin: 0;
+    }
+  }
+
+  .popup-deep-dive__section-intro {
+    max-width: 25rem;
+    margin: 8rem 0 8rem 8rem;
+  }
+
+  .popup-deep-dive__section-content {
+    background-color: var(--color-paper);
+    padding: 1rem 8rem 4rem;
+    margin-top: -2rem;
   }
 }
