--- a/_scss/_accordian-list.scss
+++ b/_scss/_accordian-list.scss
@@ -45,7 +45,7 @@
       height: auto;
       max-height: 100vh;
       background-color: var(--color-blue-dark);
-      padding: 4em;
+      padding: 4em 2rem;
       margin: 2rem;
     }
   }
@@ -65,6 +65,13 @@
     line-height: 1.25em;
     max-width: 58ch;
   }
+}
+
+.toggle__container--wrapper {
+  width: 101%;
+  max-height: calc(600px - 2rem);
+  overflow-y: scroll;
+  padding: 0 2rem;
 }
 
 .toggle__icon {
