--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -316,6 +316,20 @@ blockquote {
   background: none;
 }
 
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
 /* ==========================================================================
    Print styles.
    Inlined to avoid the additional HTTP request:
