--- a/_scss/_sections.scss
+++ b/_scss/_sections.scss
@@ -8,9 +8,16 @@
   min-height: 900px;
 
   #section-intro-1 {
+    background-color: var(--color-blue);
+
+
+    @media (min-width: 1680px) {
+      background: none;
+    }
+
     width: 100%;
     max-width: 70ch;
-    margin: 4rem 2rem 0 0;
+    padding: 4rem 2rem 0 1rem;
     z-index: +1;
 
     .h1 {
@@ -351,8 +358,18 @@
 
   .component__block--left,
   .component__block--right {
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+    justify-content: center;
     width: 100%;
+    height: 100%;
     max-width: 36rem;
+    padding: 2rem;
+  }
+
+  .component__block--right {
+    background-color: var(--color-paper);
   }
 }
 
