--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -260,8 +260,10 @@ blockquote {
 
 // Utility
 .text-break {
-  display: block;
-  clear: both;
+  @media(min-width: 640px) {
+    display: block;
+    clear: both;
+  }
 }
 
 .text-yellow {
@@ -316,18 +318,24 @@ blockquote {
   background: none;
 }
 
-.video-responsive{
-    overflow:hidden;
-    padding-bottom:56.25%;
-    position:relative;
-    height:0;
+.iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
 }
-.video-responsive iframe{
-    left:0;
-    top:0;
-    height:100%;
-    width:100%;
-    position:absolute;
+.iframe-container iframe {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.responsive-image {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
 }
 
 /* ==========================================================================
