--- a/_scss/_popup.scss
+++ b/_scss/_popup.scss
@@ -1,6 +1,6 @@
 .popup {
   display: flex;
-  flex-flow: row;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: stretch;
   position: relative;
@@ -16,11 +16,15 @@
   align-items: center;
   padding: 4rem;
   border-radius: 2rem;
-  margin: 0 2rem;
+  margin: 2rem;
   background: var(--color-paper);
   -webkit-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
   -moz-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
   box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
+
+  @media(min-width: 1200px) {
+    margin: 0 2rem;
+  }
 }
 
 .popup__toggle {
