--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -1,5 +1,5 @@
 .site-header {
-  width: 100%;
+  width: calc(100% - 2rem);
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
@@ -8,6 +8,10 @@
   background-image: url('https://mediasmarts.ca/sites/mediasmarts/themes/mediasmarts/images/backgrounds/header_bgr.png');
   background-position: right -50px;
   background-repeat: no-repeat;
+
+  @media(min-width: 768px) {
+    width: calc(100% - 4rem);
+  }
 }
 
 .site-header__logo {
@@ -24,7 +28,7 @@
 
   @media(min-width: 768px) {
     width: 100%;
-    max-width: 10rem;
+    max-width: 50%;
   }
 }
 
