--- a/_scss/_list.scss
+++ b/_scss/_list.scss
@@ -44,7 +44,7 @@
 .list--menu {
   display: flex;
   position: relative;
-  z-index: 100;
+  z-index: map-get($z-index, navigation);
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
@@ -61,6 +61,7 @@
     bottom: -2rem;
     overflow: hidden;
     padding-top: 10rem;
+    z-index: map-get($z-index, footer);
 
     &:after {
       content: "";
@@ -72,7 +73,6 @@
       display: block;
       top: 8rem;
       left: -50vw;
-      z-index: 10;
     }
   }
 }
@@ -151,7 +151,7 @@
 // Definition list
 
 dl {
-  margin: 0 2rem 0;
+  margin: 0 2rem 0 0;
   padding: 0;
   max-width: 40rem;
 }
