--- a/_scss/_popup.scss
+++ b/_scss/_popup.scss
@@ -39,16 +39,19 @@
   &:checked + .popup__toggle-label {
     .popup__icon {
       color: var(--color-paper);
-      position: absolute;
-      top: -2rem;
-      z-index: +2;
+      position: fixed;
+      top: 2rem;
+      z-index: +1;
       right: 2rem;
+      z-index: map-get($z-index, modal-controls);
 
       &.popup__icon--bg-white {
         color: var(--color-blue);
       }
 
       &:after {
+        margin: 0;
+        padding: 0;
         font-size: 2rem;
         content: fa-content($fa-var-times-circle);
       }
@@ -56,11 +59,13 @@
 
     + .popup__container {
       opacity: 1;
-      height: 600px;
-      width: 100%;
+      height: 100vh;
+      width: 100vw;
       left: 50%;
       transform: translateX(-50%);
-      top: -2rem;
+      position: fixed;
+      z-index: map-get($z-index, modal);
+      top: 0;
       background-color: var(--color-paper);
       -webkit-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
       -moz-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
@@ -73,7 +78,6 @@
   position: absolute;
   z-index: +1;
   height: 0;
-  border-radius: 2rem;
   overflow: hidden;
   transition: opacity .4s ease;
   opacity: 0;
