--- a/_scss/_sections.scss
+++ b/_scss/_sections.scss
@@ -188,6 +188,7 @@
         display: inline-block;
 
         strong {
+          font-family: $font-display;
           font-size: 4rem;
           line-height: 1em;
           text-transform: uppercase;
