--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -18,6 +18,15 @@ html {
   font-family: $font-body;
 }
 
+* {
+  max-width: 100%;
+  box-sizing: border-box !important;
+}
+
+img[src] {
+  max-width: 100%;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
@@ -194,6 +203,7 @@ textarea {
 .h6 {
   font-family: $font-display;
   line-height: 1.2em;
+  padding: 0 0 2rem 0;
 }
 
 .h2 {
@@ -368,9 +378,6 @@ input + label {
     /* Black prints faster */
     box-shadow: none !important;
     text-shadow: none !important;
-  }
-  * {
-    box-sizing: border-box;
   }
   a,
   a:visited {
