--- a/_scss/_footnotes.scss
+++ b/_scss/_footnotes.scss
@@ -1,8 +1,11 @@
 .footnote {
-  position: absolute;
-  bottom: 1rem;
   :target {
     background-color: var(--color-yellow);
+  }
+
+  @media (min-width: 768px) {
+    position: absolute;
+    bottom: 1rem;
   }
 }
 
