--- a/_scss/_popup.scss
+++ b/_scss/_popup.scss
@@ -9,18 +9,21 @@
 }
 
 .popup__item {
-  max-width: 320px;
+  max-width: 100%;
   display: flex;
   flex-flow: column;
   justify-content: flex-start;
   align-items: center;
-  padding: 4rem;
-  border-radius: 2rem;
-  margin: 2rem;
-  background: var(--color-paper);
-  -webkit-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
-  box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
+
+  @media(min-width: 768px) {
+    padding: 4rem;
+    border-radius: 2rem;
+    margin: 2rem;
+    background: var(--color-paper);
+    -webkit-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
+    box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
+  }
 
   @media(min-width: 1200px) {
     margin: 0 2rem;
@@ -28,6 +31,12 @@
 }
 
 .popup__toggle {
+  + .popup__toggle-label {
+    .text-break {
+      display: block;
+    }
+  }
+
   &:hover + .popup__toggle-label,
   &:focus + .popup__toggle-label {
     .popup__icon {
