--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,4 +1,4 @@
-@import 'normalize';
+@import 'reset';
 @import 'vars';
 @import '../assets/fontawesome-free-5.13.0-web/scss/fontawesome';
 @import '../assets/fontawesome-free-5.13.0-web/scss/solid';
