Updates: completes responsive on index page

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -203,7 +203,7 @@ textarea {
 .h6 {
   font-family: $font-display;
   line-height: 1.2em;
-  padding: 0 0 2rem 0;
+  margin-bottom: 1rem;
 }
 
 .h2 {
@@ -233,6 +233,7 @@ textarea {
 p {
   font-size: 1.2rem;
   line-height: 1.55em;
+  margin-bottom: 1rem;
 }
 
 
