--- a/_scss/_popup.scss
+++ b/_scss/_popup.scss
@@ -14,6 +14,7 @@
   flex-flow: column;
   justify-content: flex-start;
   align-items: center;
+  margin: 1rem 0 2rem;
 
   @media(min-width: 768px) {
     padding: 4rem;
@@ -32,6 +33,8 @@
 
 .popup__toggle {
   + .popup__toggle-label {
+    padding-top: 1rem;
+
     .text-break {
       display: block;
     }
@@ -49,10 +52,15 @@
     .popup__icon {
       color: var(--color-paper);
       position: fixed;
-      top: 2rem;
+      top: 1rem;
+      right: 1rem;
       z-index: +1;
-      right: 2rem;
       z-index: map-get($z-index, modal-controls);
+
+      @media (min-width: 768px) {
+        top: 2rem;
+        right: 2rem;
+      }
 
       &.popup__icon--bg-white {
         color: var(--color-blue);
@@ -70,6 +78,7 @@
       opacity: 1;
       height: 100vh;
       width: 100vw;
+      overflow-y: scroll;
       left: 50%;
       transform: translateX(-50%);
       position: fixed;
