--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -33,6 +33,8 @@
 }
 
 .lang-link {
-  position: absolute;
-  top: 6rem;
+  @media(min-width: 768px) {
+    position: absolute;
+    top: 6rem;
+  }
 }
