--- a/_scss/_sections.scss
+++ b/_scss/_sections.scss
@@ -529,18 +529,32 @@
 }
 
 #section-about {
+  flex-flow: column;
   background-image: url('../assets/exports/about-campaign.png');
   background-repeat: no-repeat;
   background-position: top left;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem;
+  width: 100vw;
+  height: auto;
+
+  @media(min-width: 768px) {
+    flex-flow: row wrap;
+    height: auto;
+    height: 100vh;
+    padding: 2rem;
+  }
 
   .h1 {
     color: var(--color-paper);
-    font-size: 4.5rem;
+    font-size: 2rem;
     text-transform: uppercase;
     margin: 0;
+
+    @media(min-width: 768px) {
+      font-size: 4.5rem;
+    }
   }
 
   .h2 {
@@ -557,11 +571,17 @@
     display: flex;
     flex-flow: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
-    max-width: 36rem;
-    padding: 2rem;
+    max-width: 100%;
+    padding: 1rem;
+
+    @media(min-width: 768px) {
+      padding: 2rem;
+      max-width: 36rem;
+      justify-content: center;
+    }
   }
 
   .component__block--right {
@@ -573,12 +593,26 @@
 #campaign-partners {
   justify-content: center;
   align-items: center;
+  padding: 1rem;
+  width: 100vw;
+  height: auto;
+
+  @media(min-width: 768px) {
+    flex-flow: row wrap;
+    height: auto;
+    height: 100vh;
+    padding: 2rem;
+  }
 
   .h2 {
-    font-size: 4.5rem;
+    font-size: 2rem;
     text-transform: uppercase;
     text-align: center;
     color: var(--color-purple);
+
+    @media(min-width: 768px) {
+      font-size: 4.5rem;
+    }
   }
 
   .component__block {
@@ -848,8 +882,9 @@
     width: 100vw;
     max-width: 100%;
     height: auto;
-    padding: 2rem;
+    padding: 1rem;
     position: relative;
+    padding-top: 220px;
 
     background-image: url('../assets/exports/deep-dive-background.png');
     background-size: 100% auto;
@@ -857,21 +892,29 @@
     background-repeat: no-repeat;
 
     @media (min-width: 1200px) {
-      min-height: 1280px;
+      padding: 2rem;
+
+      .container {
+        margin: 15% 0 0 15%;
+      }
     }
 
-    .container {
-      margin: 15% 0 0 15%;
+    @media (min-width: 1200px) {
+      min-height: 1280px;
     }
 
     .title {
       font-size: 3rem;
       font-weight: 900;
       line-height: 1em;
-      color: var(--color-paper);
+      color: var(--color-blue);
       text-transform: uppercase;
       text-align: left;
       margin: 0;
+
+      @media (min-width: 1200px) {
+        color: var(--color-paper);
+      }
 
       .fr & {
         max-width: 15ch;
@@ -918,18 +961,25 @@
     justify-content: flex-start;
     align-items: flex-start;
     width: 100%;
-    margin-top: -600px;
-    z-index: map-get($z-index, modal);
+
+    @media(min-width: 768px) {
+      margin-top: -600px;
+      z-index: map-get($z-index, modal);
+    }
 
     .deep-dive__section-content {
-      background: var(--color-paper);
-      -webkit-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
-      -moz-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
-      box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
+      padding: 1rem;
 
-      max-width: 960px;
-      padding: 2rem 6rem 2rem 4rem;
-      margin-left: 15%;
+      @media(min-width: 768px) {
+        max-width: 960px;
+        padding: 2rem 6rem 2rem 4rem;
+        margin-left: 15%;
+
+        background: var(--color-paper);
+        -webkit-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
+        -moz-box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
+        box-shadow: 0 16px 16px -8px rgba(0,0,0,0.5);
+      }
 
       p {
         font-size: 1.25rem;
